2025-06-22T01:00:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15801356955 # 682
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
* notice: last 14d: unq all: 7 11
* notice: prev accum: outdated-unq outdated-all / unq all: 445 1457 / 453 1469
* notice: next accum: outdated-unq outdated-all / unq all: 446 1458 / 453 1469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-06-07] / []

2025-06-19T00:55:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15746825370 # 679
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-19
* notice: last 14d: unq all: 8 12
* notice: prev accum: outdated-unq outdated-all / unq all: 444 1456 / 451 1466
* notice: next accum: outdated-unq outdated-all / unq all: 445 1457 / 453 1469
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2025-06-04] / [2025-06-18]

2025-06-18T00:55:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15721299974 # 678
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-18
* notice: last 14d: unq all: 7 10
* notice: prev accum: outdated-unq outdated-all / unq all: 444 1456 / 450 1464
* notice: next accum: outdated-unq outdated-all / unq all: 444 1456 / 451 1466
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-06-17]

2025-06-17T00:55:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15695384180 # 677