@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-22T01:00:28Z",
-  "count_outdated" : 1458,
-  "uniques_outdated" : 446,
+  "timestamp" : "2025-06-24T00:55:47Z",
+  "count_outdated" : 1460,
+  "uniques_outdated" : 447,
   "count" : 1469,
   "uniques" : 453,
   "views" : [
-    {
-      "timestamp": "2025-06-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-10T00:00:00Z",
       "count": 2,
