@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 7,
+  "count": 9,
+  "uniques": 6,
   "views": [
-    {
-      "timestamp": "2025-06-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-10T00:00:00Z",
       "count": 2,
