@@ -1,3 +1,12 @@
+2025-06-24T00:55:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15838516349 # 684
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-24
+* notice: last 14d: unq all: 6 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 446 1458 / 453 1469
+* notice: next accum: outdated-unq outdated-all / unq all: 447 1460 / 453 1469
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-06-09] / []
+
 2025-06-22T01:00:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15801356955 # 682
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
